tests/compile-fail/integration__integration__general__const_reg.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: raw register in const context
   ┌─ <input>:25:23
   │
25 │         const int y = $REG[10000];
   │                       ^^^^^^^^^^^ forbidden in this context


